; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_pointer-set.c_pointer_set_traverse.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_pointer-set.c_pointer_set_traverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pointer_set_t = type { i64, i8** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pointer_set_traverse(%struct.pointer_set_t* %0, i32 (i8*, i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.pointer_set_t*, align 8
  %5 = alloca i32 (i8*, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.pointer_set_t* %0, %struct.pointer_set_t** %4, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %35, %3
  %9 = load i64, i64* %7, align 8
  %10 = load %struct.pointer_set_t*, %struct.pointer_set_t** %4, align 8
  %11 = getelementptr inbounds %struct.pointer_set_t, %struct.pointer_set_t* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ult i64 %9, %12
  br i1 %13, label %14, label %38

14:                                               ; preds = %8
  %15 = load %struct.pointer_set_t*, %struct.pointer_set_t** %4, align 8
  %16 = getelementptr inbounds %struct.pointer_set_t, %struct.pointer_set_t* %15, i32 0, i32 1
  %17 = load i8**, i8*** %16, align 8
  %18 = load i64, i64* %7, align 8
  %19 = getelementptr inbounds i8*, i8** %17, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %34

22:                                               ; preds = %14
  %23 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %5, align 8
  %24 = load %struct.pointer_set_t*, %struct.pointer_set_t** %4, align 8
  %25 = getelementptr inbounds %struct.pointer_set_t, %struct.pointer_set_t* %24, i32 0, i32 1
  %26 = load i8**, i8*** %25, align 8
  %27 = load i64, i64* %7, align 8
  %28 = getelementptr inbounds i8*, i8** %26, i64 %27
  %29 = load i8*, i8** %28, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 %23(i8* %29, i8* %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %22
  br label %38

34:                                               ; preds = %22, %14
  br label %35

35:                                               ; preds = %34
  %36 = load i64, i64* %7, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %7, align 8
  br label %8

38:                                               ; preds = %33, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
